refactor :- adding document

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Demo</title>
 </head>
 <body>
-    Hi!! I am Unnati Makrariya.
+    Hi!! I am Unnati Makrariya.I am a 2nd year C.S student at ITM GOI.
 </body>
 </html>
