update project details

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Demo</title>
 </head>
 <body>
-    Hi!! I am Unnati Makrariya.I am a 2nd year C.S student at ITM GOI.hello
+    Hi!! I am Unnati Makrariya.I am a 2nd year C.S student at ITM GOI.
+    I have worked on few CLI apps . I will showcase it here tomorrow.
 </body>
 </html>
