--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     Hi!! I am Unnati Makrariya.I am a 2nd year C.S student at ITM GOI.
     I have worked on few CLI apps . I will showcase it here tomorrow.
+    I am exploring new things everyday.
 </body>
 </html>
