--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     Hi!! I am Unnati Makrariya.I am a 2nd year C.S student at ITM GOI.
     I have worked on few CLI apps . I will showcase it here tomorrow.
     I am exploring new things everyday.
+    My hobbies are:
+    - learning about technology.
+    - arts and design.
+    - photography.
 </body>
 </html>
