--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     - learning about technology.
     - arts and design.
     - photography.
+    - travelling
+    - gymnastics
+    - music
+    - adventurous sports
 </body>
 </html>
