--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     My hobbies are:
     - learning about technology.
     - arts and design.
-    - photography.
+    - photography📸.
     - travelling
     - gymnastics
     - music
     - adventurous sports
+
 </body>
 </html>
